--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,3 +1,5 @@
-<div class="index-container">
-  
+<div class="index-div-container">
+  <img class="index-beer" src="images/beer.png" alt="beer-image">
+	<a href="/beers"><button>Check the Beers!</button></a>
+	<a href="/random-beers"><button>Check a Random Beer</button> </a>
 </div>
